Fix logo alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -349,3 +349,7 @@ input[type=number]::-webkit-inner-spin-button {
 .img-reaktor {
   height: 40px;
 }
+
+.footer .img-reaktor {
+  margin-top: 10px; /* to align baselines with the futu logo in the footer */
+}
